--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 This is the home repo for Nathan Wease
 This page is setup up for CIT 281
+For some reason, when I tried to adjust the image size, it wouldn't make the image smaller.
