Test to see if HTML Headings work for index.html on home repo

--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
-This is the home repo for Nathan Wease
-This page is setup up for CIT 281
-For some reason, when I tried to adjust the image size, it wouldn't make the image smaller.
+<h1>This is the home repo for Nathan Wease</h1>
+<h2>I am a student at the University of Oregon</h2>
