--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1>This is the home repo for Nathan Wease</h1>
-<h2>I am a student at the University of Oregon</h2>
+<h2>I am a student at the University of Oregonr</h2>
+<p>As of now, all contents on this page relate to CIT 281</p>
